# rust_base

./: .gitignore  BUILD.gn  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bind.rs  file_proxy.rs  io_task_runner.rs  lib.rs  rustfmt.toml  sequence_token.rs  socket_posix.rs
.github/workflows/: ci.yml
docs/: runtime-feasibility.md
docs/tutorial/: 01-philosophy.md  02-task.md  03-thread-pool.md  04-sequence.md  05-internals.md  06-bind-once.md  07-timers.md  08-shutdown.md  09-post-task-and-reply.md  10-io-message-pump.md  11-appendix.md  README.md
examples/: event_bus.rs  file_posix.rs
rust_async/: Cargo.toml  README.md  block_on.rs  current_thread.rs  executor.rs  fs.rs  io.rs  lib.rs  local.rs  net.rs  reactor.rs  runtime.rs  sequenced.rs  stream.rs  sync.rs  task.rs
rust_async/examples/: async_cat.rs  async_tcp_echo.rs  file_pipeline.rs  http_get.rs  http_server.rs  http_server_multicore.rs  pipeline_sync.rs  tick_and_timeout.rs  udp_chat.rs  unix_echo.rs
rust_async/os/unix/: net.rs
rust_async/tests/: current_thread.rs  fs.rs  http_server.rs  io.rs  local.rs  runtime.rs  sequenced.rs  stdio.rs  stream.rs  sync.rs  task.rs  tcp_echo.rs  unix.rs
rust_io/: Cargo.toml  README.md  epoll_pump.rs  file_proxy.rs  io_task_runner.rs  lib.rs  message_pump.rs
rust_io/examples/: file_proxy.rs  io_task_runner.rs
rust_net/: Cargo.toml  README.md  lib.rs  socket_posix.rs  tcp_client_socket.rs  tcp_server_socket.rs  tcp_socket.rs  tls_client_socket.rs
rust_net/examples/: socket_posix.rs  tcp_echo.rs
rust_task/: CLAUDE.md  Cargo.toml  README.md  architecture.md  bind.rs  lib.rs  sequenced_task_runner.rs  socket_posix.rs  task.rs  task_monitor.rs  task_runner.rs  task_traits.rs  timer.rs
rust_task/docs/: io_task_runner.md
rust_task/examples/: event_bus.rs  file_proxy.rs  io_task_runner.rs  repeating_timer.rs  socket_posix.rs  task_monitor.rs
rust_task/tests/: thread_pool_integration.rs
rust_task/thread_pool/: delayed_task_manager.rs  mod.rs  pooled_parallel_task_runner.rs  pooled_sequenced_task_runner.rs  priority_queue.rs  thread_group.rs  thread_pool.rs  worker_thread.rs
skills/rust-base/references/: rust_io.md
tests/: thread_pool_integration.rs
thread_pool/: delayed_task_manager.rs  mod.rs  pooled_parallel_task_runner.rs  pooled_sequenced_task_runner.rs  priority_queue.rs  sequence.rs  task_source.rs  task_tracker.rs  thread_group.rs  thread_pool.rs  worker_thread.rs
