import("//build/rust/rust_static_library.gni")

rust_static_library("rust_task") {
  crate_root = "lib.rs"
  allow_unsafe = true

  sources = [
    "lib.rs",
    "sequence_token.rs",
    "sequenced_task_runner.rs",
    "task.rs",
    "task_runner.rs",
    "task_traits.rs",
    "thread_pool/delayed_task_manager.rs",
    "thread_pool/mod.rs",
    "thread_pool/pooled_parallel_task_runner.rs",
    "thread_pool/pooled_sequenced_task_runner.rs",
    "thread_pool/priority_queue.rs",
    "thread_pool/sequence.rs",
    "thread_pool/task_source.rs",
    "thread_pool/task_tracker.rs",
    "thread_pool/thread_group.rs",
    "thread_pool/thread_pool.rs",
    "thread_pool/worker_thread.rs",
  ]
}
