[package]
name = "rust_async"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Spike: a Future/poll/Waker async runtime layered on rust_task + rust_io"

[lib]
path = "lib.rs"

[dependencies]
rust_task = { path = "../rust_task" }
rust_io = { path = "../rust_io" }
async-task = "4"
futures-core = "0.3"
futures-io = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }
libc = { workspace = true }

[dev-dependencies]
futures-lite = "2"
httparse = "1"
# Also listed above as normal deps; repeated here so integration tests and
# examples can assemble a `Runtime` from the concrete runners by name.
rust_task = { path = "../rust_task" }
rust_io = { path = "../rust_io" }

[[example]]
name = "async_tcp_echo"
path = "examples/async_tcp_echo.rs"

[[example]]
name = "http_server"
path = "examples/http_server.rs"

[[example]]
name = "http_server_multicore"
path = "examples/http_server_multicore.rs"
