[package]
name = "rust_net"
description = "Async TCP client/server, StreamSocket abstraction, and optional async TLS (rustls) for Linux — a Rust port of Chromium's net::SocketPosix / net::SSLClientSocket."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"

[features]
# Async TLS (TlsClientSocket) via rustls. Off by default so a plain TCP user
# isn't forced to compile rustls + ring.
tls = ["dep:rustls"]

# rustls is cross-platform; the TLS *code* is still gated on target_os = "linux".
[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
rust_io = { path = "../rust_io", version = "0.1.0" }
# Used by socket timeouts (post_delayed_task via the TaskRunner trait).
rust_task = { path = "../rust_task", version = "0.1.0" }

[target.'cfg(target_os = "linux")'.dev-dependencies]
# For the tls feature's example / test:
webpki-roots = "0.26"
rcgen = "0.13"

[[example]]
name = "https_get"
required-features = ["tls"]

[[example]]
name = "https_fetch"
required-features = ["tls"]
